// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Separators should match snapshot 1`] = `
[
  <RNGestureHandlerButton
    accessibilityLabel="More options"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      [
        {
          "backgroundColor": "#E4E7EA",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "cursor": undefined,
        },
      ]
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      More options
    </Text>
  </RNGestureHandlerButton>,
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
  <RNGestureHandlerButton
    accessibilityLabel="Less options"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      [
        {
          "backgroundColor": "#E4E7EA",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 0,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "cursor": undefined,
        },
      ]
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Less options
    </Text>
  </RNGestureHandlerButton>,
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
]
`;

exports[`Story Snapshots: ServiceListCollapsed should match snapshot 1`] = `
[
  <RNGestureHandlerButton
    accessibilityLabel="Login on web"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      [
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "cursor": undefined,
        },
      ]
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Login on web
    </Text>
  </RNGestureHandlerButton>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Github"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Github
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Gitlab"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Gitlab
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Google"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Google
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
]
`;

exports[`Story Snapshots: ServiceListUncollapsed should match snapshot 1`] = `
[
  <RNGestureHandlerButton
    accessibilityLabel="Login on web"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      [
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "cursor": undefined,
        },
      ]
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 4,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Login on web
    </Text>
  </RNGestureHandlerButton>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Github"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Github
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Gitlab"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Gitlab
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Google"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Google
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#E4E7EA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityLabel="Continue with Apple"
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              Apple
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
]
`;

exports[`Story Snapshots: ServicesList should match snapshot 1`] = `
[
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#F7F8FA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              github
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#F7F8FA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              gitlab
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#F7F8FA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              google
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      activeOpacity={0.5}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#E4E7EA"
      style={
        [
          {
            "backgroundColor": "#F7F8FA",
            "borderRadius": 4,
            "margin": undefined,
            "marginBottom": 10,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      underlayColor="#FFFFFF"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": 4,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessible={true}
        style={{}}
      >
        <View
          accessible={false}
          style={
            {
              "alignItems": "center",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 15,
              "paddingVertical": 14,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2F343D",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  {
                    "left": 15,
                    "position": "absolute",
                  },
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            accessible={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                {
                  "color": "#1F2329",
                },
              ]
            }
          >
            Continue with
             
            <Text
              style={
                {
                  "backgroundColor": "transparent",
                  "fontFamily": "Inter",
                  "fontVariant": [
                    "tabular-nums",
                  ],
                  "fontWeight": "600",
                  "textAlign": "left",
                }
              }
            >
              apple
            </Text>
          </Text>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
]
`;
